# Intelligent_Medical_Form-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  answers.json  main.ipynb  problem.md  pyproject.toml  requirements.txt  schema.json
.github/workflows/: ci.yml
src/: __init__.py  information_extraction.py  pdf_population.py  scanned_schema_extraction.py  schema_extraction.py
src/form_filler/: __init__.py  cli.py  config.py  logging_config.py  pdf_populator.py  pipeline.py  reconciler.py
src/form_filler/extractors/: __init__.py  base.py  demographics.py  lab.py  soap.py  utils.py
src/form_filler/schema/: __init__.py  acroform.py
tests/: conftest.py  test_config.py  test_demographics_extractor.py  test_lab_extractor.py  test_pdf_populator.py  test_pipeline.py  test_reconciler.py  test_soap_extractor.py  test_utils.py
